# gl_library

./: CMakeLists.txt  Doxyfile  GLWindow.cpp  GLWindow.hpp  OpenGL_1.vcxproj  OpenGL_1.vcxproj.filters  VisualStudio.gitignore  imgui.ini  main.cpp
Unit_Test/: test.cpp
include/: Camera.hpp  Cubex.hpp  Cylinder.hpp  HollowCube.hpp  HollowCylinder.hpp  Jaw.hpp  Light.hpp  Mesh.hpp  Object.hpp  Plane.hpp  Renderer.hpp  Scene.hpp  Sphere.hpp  Transform.hpp  VertexArray.hpp  VertexBufferLayout.hpp
include/buffers/: IndexBuffer.hpp  VertexBuffer.hpp
include/event/: Event.hpp  KeyPressedEvent.hpp  Publisher.hpp
include/shader/: FragmentShader.hpp  Shader.hpp  VertexShader.hpp
include/test/: ClearColor.hpp  Cube.hpp  Scenery.hpp  Test.hpp  TestMenu.hpp  Texture2D.hpp
include/texture/: Texture.hpp
include/window/: GLWindow.hpp
res/shaders/: Basic.shader  cube_shader.shader  default_shader.shader
source/: Camera.cpp  Cubex.cpp  Cylinder.cpp  HollowCube.cpp  HollowCylinder.cpp  Jaw.cpp  Light.cpp  Mesh.cpp  Object.cpp  Plane.cpp  Renderer.cpp  Scene.cpp  Sphere.cpp  Transform.cpp  VertexArray.cpp  VertexBufferLayout.cpp
source/buffers/: IndexBuffer.cpp  VertexBuffer.cpp
source/event/: Event.cpp  KeyPressedEvent.cpp  Publisher.cpp
source/shader/: FragmentShader.cpp  Shader.cpp  VertexShader.cpp
source/test/: ClearColor.cpp  Cube.cpp  Scenery.cpp  Test.cpp  TestMenu.cpp  Texture2D.cpp
source/texture/: Texture.cpp
source/window/: GLWindow.cpp
x64/Debug/: CodeAnalysisResultManifest.txt  OpenGL_1.exe.recipe  Shader.nativecodeanalysis.sarif  vc143.idb
x64/Debug/OpenGL_1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  OpenGL_1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
